--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,5 +4,5 @@
 @import "{{ site.theme }}";
 
 .page-header {
-    background-image: url("cb_promo.jpg") !important;
+    background-image: url("/cb_promo.jpg") !important;
 }
