--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,4 +5,6 @@
 
 .page-header {
     background-image: url("/cb_promo.jpg") !important;
+    background-position: center;
+    max-height: 380px;
 }
