Make the image fit better

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,4 +7,5 @@
     background-image: url("/cb_promo.jpg") !important;
     background-position: center;
     max-height: 380px;
+    background-size: cover;
 }
